--- a/kickstarter_data.ipynb
+++ b/kickstarter_data.ipynb
@@ -195,10 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t werkt\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"t werkt\")"
+   ]
   },
   {
    "cell_type": "code",
